plugins {
  id 'org.springframework.boot' version '2.1.8.RELEASE'
  id 'io.spring.dependency-management' version '1.0.8.RELEASE'
  id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'de.gowlr'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'


configurations { 
 developmentOnly
  runtimeClasspath {
    extendsFrom developmentOnly
  }
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
	mavenCentral()
}

dependencies {

implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.thymeleaf.extras:thymeleaf-extrasspringsecurity5'
  compileOnly 'org.projectlombok:lombok'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  runtimeOnly 'org.postgresql:postgresql'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.security:spring-security-test'

	
	
	
	implementation 'com.github.zhanhb:thymeleaf-layout-dialect:2.4.1'

	// compile'org.postgresql:postgresql'
	// https://mvnrepository.com/artifact/org.webjars/bootstrap
	compile  'org.webjars:bootstrap:4.3.1'
	compile 'org.webjars:webjars-locator:0.30'
}
